--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "cpclubs",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "author": "",
