--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
         {
             "src": "index.js",
             "use": "@vercel/node"
+        },
+        {
+            "src": "public/**",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
@@ -12,8 +16,8 @@
             "dest": "/public/$1"
         },
         {
-            "src": "/(.*)",
-            "dest": "/index.js"
+            "src": "/.*",
+            "dest": "index.js"
         }
     ]
 }
