fix: optimize for Vercel serverless deployment
- Add MongoDB connection pooling and caching
- Add transactions for data consistency
- Add health check endpoint
- Optimize database operations
- Update Vercel configuration
- Improve error handling

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,14 @@
     ],
     "routes": [
         {
+            "src": "/health",
+            "dest": "index.js"
+        },
+        {
+            "src": "/update",
+            "dest": "index.js"
+        },
+        {
             "src": "/(.*)",
             "dest": "index.js"
         }
@@ -17,5 +25,11 @@
             "path": "/update",
             "schedule": "0 */3 * * *"
         }
-    ]
+    ],
+    "functions": {
+        "index.js": {
+            "memory": 1024,
+            "maxDuration": 10
+        }
+    }
 }
