--- a/package.json
+++ b/package.json
@@ -14,14 +14,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.8",
-    "cheerio": "^1.0.0",
-    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "moment": "^2.30.1",
-    "mongoose": "^8.8.3",
-    "node-cron": "^3.0.3"
+    "mongoose": "^8.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
