--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.4",
+    "bootstrap": "^5.3.2",
+    "cheerio": "^1.0.0",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "moment": "^2.30.1",
-    "mongoose": "^8.8.3"
+    "mongoose": "^8.8.3",
+    "open": "^10.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.9"
   }
 }
